--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,9 +25,9 @@ en:
     student: "Student"
     skilled_worker: "Skilled Worker"
     updated:
-      fee_or_salary: "You’re being shown this page because you changed your answer to funding type."
+      funding_type: "You’re being shown this page because you changed your answer to funding type."
       apprenticeship: "You’re being shown this page because you changed your answer to whether this is a teaching apprenticeship."
-      fee_or_salary_and_visa: "Funding type and %{visa_type} visas updated"
+      funding_type_and_visa: "Funding type and %{visa_type} visas updated"
       apprenticeship_and_visa: "Teaching apprenticeship and %{visa_type} visas updated"
       visa: "%{visa_type} visas updated"
   page_titles:
